Wrap flag added, minor fixes

--- a/style/visual.less
+++ b/style/visual.less
@@ -31,6 +31,10 @@ p {
     background-color: transparent;
 }
 
+.subtitleTextValue{
+    height: max-content !important;
+}
+
 .divOuter{
 	margin-bottom: 25px;
 }
